MainMethodTestCases/src/com/example/valid/Main11.java
package com.example.valid;

import java.io.IOException;

public class Main11 {

	/**
	 * Valid.
	 * 
	 * Throwing a checked exception, like IOException, is legal.
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
	public static void main(String[] args) throws IOException {
		System.out.println("Main11!");
	}

}
