MainMethodTestCases/src/com/example/invalid/Main24.java
package com.example.invalid;

public class Main24 {

	/**
	 * Invalid.
	 * 
	 * Main methods must take a single String array as a parameter
	 */
	public static void main(String[] args, String[] args2) {

	}

}
